--- a/build.gradle
+++ b/build.gradle
@@ -23,14 +23,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation "org.springframework.boot:spring-boot-starter-security"
+	implementation 'com.auth0:java-jwt:4.4.0'
+	testImplementation 'org.projectlombok:lombok:1.18.28'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
+	implementation "org.springframework.boot:spring-boot-starter-security"
+	testImplementation "org.springframework.boot:spring-boot-starter-test"
+	implementation 'com.auth0:java-jwt:4.4.0'
+	implementation 'net.datafaker:datafaker:2.1.0'
 }
+
 
 tasks.named('test') {
 	useJUnitPlatform()
