--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 
-spring.datasource.url=jdbc:h2:mem:readrift
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/readrift
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.defer-datasource-initialization=true
-
-spring.h2.console.enabled=true
 
 ##JWT Configuracion de secreto y tiempo de token
 jwt.secret-key=Señ0r@DeJavaYSpringB00tT0keN2023-Tkasfd7$
